# app/routes/router.go
@@ -118,10 +118,12 @@ func Handle(app *fiber.App) {
 	api.Get("/transactions/user/:id", transaction.GetTransactionUser)
 	api.Get("/transactions/category/:id", transaction.GetTransactionCategory)
 	api.Get("/transactions/balance/:id", transaction.GetTransactionBalance)
+	api.Get("/transactions/account/:id", transaction.GetTransactionAccount)
 	api.Get("/transactions/date/:date", transaction.GetTransactionDate)
 	// api.Get("/transactions/month/:month", transaction.GetTransactionMonth)
 	// api.Get("/transactions/year/:year", transaction.GetTransactionYear)
 	api.Get("/transactions/:from/date/:to", transaction.GetTransactionFromDateTo)
+	api.Get("/transactions/:from/date/:to/group/:group/:id", transaction.GetTransactionFromDateToFilter)
 	api.Get("/transaction/income", transaction.GetTransactionIncome)
 	api.Get("/transaction/outcome", transaction.GetTransactionOutcome)
 	api.Post("/transaction/mass", transaction.PostTransactionMass)
